--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^12.7.0",
     "googleapis": "^169.0.0",
     "lucide-react": "^0.562.0",
+    "mongodb": "^7.0.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
