Add reCAPTCHA config placeholders to .env.local.example
Added commented placeholders for reCAPTCHA SITE_KEY and SECRET_KEY to guide developers in configuring reCAPTCHA integration.

--- a/.env.local.example
+++ b/.env.local.example
@@ -13,3 +13,7 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret
 # Job Portal Skills API
 NEXT_PUBLIC_SKILLS_API_KEY=your_skills_api_key
 NEXT_PUBLIC_SKILLS_API_BASE_URL=https://job-potal-skill-api.vercel.app
+
+#reCAPTCHA
+# SITE_KEY = ''
+# SECRET_KEY = ''
