--- a/.env.local.example
+++ b/.env.local.example
@@ -15,5 +15,5 @@ NEXT_PUBLIC_SKILLS_API_KEY=your_skills_api_key
 NEXT_PUBLIC_SKILLS_API_BASE_URL=https://job-potal-skill-api.vercel.app
 
 #reCAPTCHA
-# SITE_KEY = ''
-# SECRET_KEY = ''
+SITE_KEY = ''
+SECRET_KEY = ''
